[package]
name = "lc3-rs"
version = "0.4.1"
authors = ["cr0sh <ska827@snu.ac.kr>"]
edition = "2018"

description = "A LC-3(Little Computer 3) virtual machine"
license = "GPL-2.0-only"
repository = "https://github.com/cr0sh/lc3-rs"
readme = "README.md"
categories = ["simulation"]

[features]
register-trace = []
instruction-trace = []
disable-crlf-compat-windows = []

[lib]
name = "lc3"
path = "src/lib.rs"
test = true
doctest = true
bench = true
doc = true
plugin = false
proc-macro = false
harness = true

[[bin]]
name = "test-proj1"
path = "src/bin/test_proj1/main.rs"

[[bin]]
name = "calc"
path = "src/bin/calc/main.rs"